# Zero

./: .gitattributes  .gitignore  README.md  build.gradle.kts  train.py
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/Brill/zero/: ExampleInstrumentedTest.kt
app/src/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/Grammar/: json_ie.gbnf
app/src/main/assets/datasets/: test_L1.csv  train_L1.csv
app/src/main/assets/scripts/: .keep
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/Brill/zero/: MainActivity.kt  ZeroApp.kt
app/src/main/java/com/Brill/zero/debug/: DebugScreen.kt
app/src/main/java/com/Brill/zero/llama/: Llama.kt
app/src/main/java/com/Brill/zero/ml/: L1NaiveBayes.kt  L1TextPreprocessor.kt  L3_SLM_Processor.kt  NlpProcessor.kt  PriorityClassifier.kt  SlmRuntime.kt  (+1 more)
app/src/main/res/drawable/: bar_purple.xml  bar_teal.xml  hollow_circle.xml  widget_card_bg.xml  widget_item_bg_dark.xml
app/src/main/res/layout/: widget_loading.xml  widget_todo.xml  widget_todo_item.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: backup_rules.xml  todo_widget_info.xml  zero_widget_info.xml
app/src/test/java/com/Brill/zero/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
preview/: index.html
(+38 files in other folders)
